--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "check": "tsc -p tsconfig.app.json && tsc -p tsconfig.node.json"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.10",
     "vite": "^7.3.0",
     "vite-plugin-ruby": "^5.1.1"
   },
